# Indices_analysis

./: .gitignore  LICENSE.txt  README.md  config.yaml  datalatentMat_dim1_v2.npy  definitions.py  env_torch_gis_py39.yml  environment.yml  log.txt  main.py  pyproject.toml  requirements.txt  setup.py
Drought_prediction/: .gitignore  product_nans.csv  seviri_error_days.csv  time.yaml
Drought_prediction/notebooks/: Import EUMETSTAT data.ipynb  metrics_spi_vci.csv  spi_analysis.ipynb
Drought_prediction/p_drought_indices/analysis/: dataset_generation.py
Drought_prediction/p_drought_indices/eumetsat_data_collection/: pipeline.py
data/: final_data.csv  season_wd_gha_2000-2010_spi_gamma_07_TAMSTAT_.csv  season_wd_gha_2000-2010_spi_gamma_10_TAMSTAT_.csv  season_wd_gha_2000-2010_spi_gamma_15_TAMSTAT_.csv  season_wd_gha_2000-2019_spi_gamma_07_CHIRPS_.csv  season_wd_gha_2000-2019_spi_gamma_10_CHIRPS_.csv  season_wd_gha_2000-2019_spi_gamma_15_CHIRPS_.csv  season_wd_gha_2001-2010_spi_gamma_07_imerg_.csv  season_wd_gha_2001-2010_spi_gamma_10_imerg_.csv  season_wd_gha_2001-2010_spi_gamma_15_imerg_.csv  season_wd_gha_2001-2010_spi_gamma_30_imerg_.csv
data/dry_wet_p/: season_wd_hoa_2005-2012_spi_gamma_180_CHIRPS_.csv  season_wd_hoa_2005-2012_spi_gamma_180_ERA5_.csv  season_wd_hoa_2005-2012_spi_gamma_180_GPCC_.csv  season_wd_hoa_2005-2012_spi_gamma_180_IMERG_.csv  season_wd_hoa_2005-2012_spi_gamma_30_CHIRPS_.csv  season_wd_hoa_2005-2012_spi_gamma_30_ERA5_.csv  season_wd_hoa_2005-2012_spi_gamma_30_GPCC_.csv  season_wd_hoa_2005-2012_spi_gamma_30_IMERG_.csv  season_wd_hoa_2005-2012_spi_gamma_60_CHIRPS_.csv  season_wd_hoa_2005-2012_spi_gamma_60_ERA5_.csv  season_wd_hoa_2005-2012_spi_gamma_60_GPCC_.csv  season_wd_hoa_2005-2012_spi_gamma_60_IMERG_.csv  season_wd_hoa_2005-2012_spi_gamma_90_CHIRPS_.csv  season_wd_hoa_2005-2012_spi_gamma_90_ERA5_.csv  season_wd_hoa_2005-2012_spi_gamma_90_GPCC_.csv  season_wd_hoa_2005-2012_spi_gamma_90_IMERG_.csv
eumetsat_data_collection/: eptc_crop_clean.py  eumdac_collection.py  pipeline.py  seviri_collection.py
functions/: __init__.py  function_clns.py
indices_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: .gitignore  Import EUMETSTAT data.ipynb  analyze_ndvi.ipynb  analyze_wd_datset.ipynb  cloud_mask.ipynb  graph_nn.ipynb  model.ipynb  ndvi_analysis.ipynb  spi_analysis.ipynb  test_ndvi.ipynb  testing_precp_product.ipynb  time_series_CV.ipynb  visualize_vci_spi.ipynb
output/: .gitignore
output/checkpoints/: convlstm_model.pt
p_drought_indices/analysis/: dataset_generation.py  metrics_table.py  models_train.py
p_drought_indices/analysis/DeepLearning/: dataset.py  (+8 more)
p_drought_indices/ancillary_vars/: FAO_HWSD.py  esa_landuse.py
p_drought_indices/configs/: config_3x3_16_3x3_32_3x3_64.py  config_3x3_32_3x3_64_3x3_128.py
p_drought_indices/eumetsat_data_collection/: pipeline.py
p_drought_indices/functions/: function_clns.py  ndvi_functions.py  process_xarray.py
p_drought_indices/precipitation/: merge_daily_data.py  regridding_products.py
p_drought_indices/vegetation/: AVHRR_data_collection.py  NDVI_indices.py  NDVI_time_series.py  cloudmask_cleaning.py
precipitation/: SPI_daily_analysis.py  SPI_wet_dry.py  describe_product.py  merge_daily_data.py  spi_analysis.ipynb
src/: definitions.py
src/analysis/: .gitignore  __init__.py
src/ancillary/: FAO_HWSD.py  esa_landuse.py  hydro_data.py
src/ancillary_vars/: FAO_HWSD.py  esa_landuse.py  hydro_data.py
src/configs/: config_3x3_16_3x3_32_3x3_64.py  config_3x3_32_3x3_64_3x3_128.py
src/eumetsat_data_collection/: pipeline.py
src/output/: .gitignore
src/precipitation/: SPI_wet_dry.py  __init__.py  climfill_impute.py  regridding_products.py  run_theory.py
src/soil_moisture/: ASCAT_soil_moisture.py
src/utils/: function_clns.py  ndvi_functions.py  process_xarray.py  xarray_functions.py  zarr.py
src/vegetation/: AVHRR_clean.py  __init__.py  cloudmask_cleaning.py  process_files.sh
vegetation/: AVHRR_clean.py  AVHRR_data_collection.py  NDVI_indices.py  cloudmask_cleaning.py
(+89 files in other folders)
