[tool.poetry]
name = "indices-analysis"
version = "0.1.0"
description = ""
authors = ["Riccardo7-DS <riccardo_dercole@yahoo.it>"]
readme = "README.md"

packages = [
    {include = "analysis", from = "src"},
    {include = "ancillary", from = "src"},
    {include = "utils", from = "src"},
    {include = "precipitation", from = "src"},
    {include = "soil_moisture", from = "src"},
    {include = "vegetation", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.9.2"
zarr = "^2.16.1"
apache-beam = {extras = ["interactive"], version = "^2.55.1"}
pangeo-forge-recipes = "^0.10.4"
geopandas = "^0.14.2"
tqdm = "^4.66.1"
geopy = "^2.4.1"
matplotlib = "^3.8.2"
xarray = "^2024.1.1"
rasterio = "^1.3.9"
gcsfs = "^2023.12.2.post1"
xskillscore = "^0.0.24"
gdal = "3.3.2"
rioxarray = "0.15.0"
earthengine-api = "^0.1.391"
geemap = "^0.32.0"
eumdac = "^2.2.1"
modis-tools = "^1.1.3"
pyhdf = "^0.11.3"
dask = "2024.2.1"
distributed = "2024.2.1"
modape = { git = "https://github.com/Riccardo7-DS/modape"}
xee = "^0.0.11"
cartopy = "^0.22.0"
odc-geo = "^0.4.5"
cfgrib = "^0.9.10.4"
cdsapi = "^0.7.0"
seaborn = "^0.13.2"
tensorboard = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
